# Pirates_Hide_and_Seek

./: CMakeLists.txt  Link-uri.txt  challenge.txt.txt  main.cpp
resources/: Denumiri piese.txt
src/: Legenda imagini.txt  LevelsPage.cpp  LevelsPage.h  Menu.cpp  Menu.h  challenge.txt  coordonateImagini.txt  dimensiuni.txt  functions.cpp  functions.cpp.save-failed  hint.txt  history.txt  main.cpp  matrice_tabla.txt  p1.txt  p2.txt  p3.txt  p4.txt  rezultate.txt  solutii_challenge.txt
